--- a/app/views/events/components/_participants.html.erb
+++ b/app/views/events/components/_participants.html.erb
@@ -1,7 +1,7 @@
 <% if !@event.community_events %>
   <div class="card mb-3">
     <div class="card-header">
-      Participats
+      Participants
     </div>
     <div class="card-body">
       <h6 class="card-subtitle mb-2 text-muted">Locals group:</h6>
@@ -16,7 +16,7 @@
 
       <hr />
 
-      <h6 class="card-subtitle mb-2 text-muted">New comers group:</h6>
+      <h6 class="card-subtitle mb-2 text-muted">Newcomers group:</h6>
 
       <div class="d-flex justify-content-start">
         <% event.refugee_participants.each do |user| %>
