--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -9,7 +9,7 @@
 <div class="container">
   <div class="row">
 
-    <div class="col-lg-6">
+    <!-- <div class="col-lg-6">
       <div class="card">
         <div class="card-header">
           What we've done so far with your contribution
@@ -22,7 +22,7 @@
           <a target="_blank" href="https://crowdaboutnow.nl/campagnes/broodjeintegratie?_sp=8e59f11e-9284-46bc-aafe-76576a984eb5.1526270528220" class="card-link">See more</a>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="col-lg-6" id="form-to-donate">
       <h2 class="mt-3">Donate</h2>
