--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -18,6 +18,7 @@
           <h2><%= raw t('.info_headline') %></h2>
           <p class="lead"><%= raw t('.info_content') %></p>
           <%= link_to "Application for teaching", new_talent_path, class: "btn btn-outline-primary btn-md mb-5" %>
+          <a href="#" class="btn btn-outline-primary btn-md ml-2 mb-5"><%= t('.discover_cta') %> </a>
         </div>
       </div>
       <div class="col-md-5 order-md-1 mb-5">
