--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,5 +1,7 @@
 <div class="container mt-5">
-  <h2>What would you like to do today?</h2>
+  <h3><%= t('.main_title') %></h3>
+
+  <h4 class="mt-5 striped-subtitle"><%= t('.social_title') %></h4>
   <div class="row my-md-4">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to events_path, class:"card shadow-sm dashboard-card-lnk" do %>
@@ -17,28 +19,29 @@
         </div>
       <% end %>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <%= link_to "", class:"card shadow-sm dashboard-card-lnk" do %>
-        <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-lightbulb"></i> <%= t('.talent_learn_card_title') %></h4>
-          <p class="card-text"><%= t('.talent_learn_card_subtitle') %></p>
-          <p>COMING SOON! 🔥</p>
-        </div>
-      <% end %>
-    </div>
-    <div class="col-xs-12 col-sm-6 col-md-4">
-      <%= link_to pages_path("donate"), class:"card shadow-sm dashboard-card-lnk" do %>
-        <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-hand-holding-usd"></i> <%= t('.donate_card_title') %></h4>
-          <p class="card-text"><%= t('.donate_card_subtitle') %></p>
-        </div>
-      <% end %>
-    </div>
+  </div>
+
+  <h4 class="mt-2 striped-subtitle"><%= t('.work_title') %></h4>
+
+  <div class="row my-md-4">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to networks_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-globe"></i> <%= t('.network_card_title') %></h4>
           <p class="card-text"><%= t('.network_card_subtitle') %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
+
+  <h4 class="mt-2 striped-subtitle"><%= t('.donate_title') %></h4>
+
+  <div class="row my-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <%= link_to pages_path("donate"), class:"card shadow-sm dashboard-card-lnk" do %>
+        <div class="card-body">
+          <h4 class="card-title"><i class="fas fa-hand-holding-usd"></i> <%= t('.donate_card_title') %></h4>
+          <p class="card-text"><%= t('.donate_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
@@ -51,4 +54,5 @@
       <% end %>
     </div>
   </div>
+
 </div>
