--- a/app/views/networks/end_submit.html.erb
+++ b/app/views/networks/end_submit.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row justify-content-md-center">
     <div class="col-lg-8 text-center">
-      <img src="https://i.giphy.com/26gsjCZpPolPr3sBy.gif" width="300" />
+      <!-- <img src="https://i.giphy.com/26gsjCZpPolPr3sBy.gif" width="300" /> -->
       <p class="mt-4"><%= raw t('.thank_you_message') %></p>
       <%= link_to "Back to dashboard", root_url %>
     </div>
