--- a/app/views/shared/_complete_profile_modal.html.erb
+++ b/app/views/shared/_complete_profile_modal.html.erb
@@ -15,11 +15,20 @@
                 <small class="form-text text-muted">We'll never share your address with anyone else.</small>
               </div>
               <div class="form-group">
+                <label><%= t('settings.profile_form.birthday_label') %> <sup>*</sup></label><br />
+                <%= f.date_select :birthday, {start_year: 1960, end_year: 2000, :order => [:day, :month, :year], prompt: true}, { class:"form-control custom-select custom-width-select" , required: true } %>
+              </div>
+              <div class="form-group">
                 <label><%= t('settings.community_form.local_label') %></label>
                 <%= f.select :local, {}, { prompt: "Please select an option" }, { class:"form-control", required: true } do %>
                   <%= options_for_select([[t('settings.community_form.im_local'), true], [t('settings.community_form.im_newcomer'), false]]) %>
                 <% end %>
                 <small class="form-text text-muted"></small>
+              </div>
+              <div class="form-group">
+                <label>WhatsApp nummer</label>
+                <%= f.text_field :phone, required: 'true', class: "form-control", required: true, placeholder: t('settings.profile_form.phone_placeholder') %>
+                <small class="form-text text-muted">Ledereen die aanwezig wilt zijn zullen we toevoegen in een WhatsApp groep.</small>
               </div>
               <% if current_user.avatar.file.nil? %>
               <div class="form-group">
@@ -39,7 +48,20 @@
       </div>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/places.js/1/places.min.js"></script>
   <script>
-    $('#myModal').modal({backdrop: 'static', keyboard: false})
+    $(function () {
+        $('#myModal').modal({backdrop: 'static', keyboard: false})
+        var placesAutocomplete = places({
+          container: document.querySelector('.location-input-form'),
+          type: 'city',
+          aroundLatLngViaIP: false,
+          templates: {
+            value: function(suggestion) {
+              return suggestion.name;
+            }
+          }
+        });
+      });
   </script>
 <% end %>
