--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -21,8 +21,8 @@
     </div>
   </div>
 
+  <% if current_user.local? %>
   <h4 class="mt-2 striped-subtitle"><%= t('.work_title') %></h4>
-
   <div class="row my-md-4">
     <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to networks_path, class:"card shadow-sm dashboard-card-lnk" do %>
@@ -33,7 +33,8 @@
       <% end %>
     </div>
   </div>
-
+  <% end %>
+  
   <h4 class="mt-2 striped-subtitle"><%= t('.donate_title') %></h4>
 
   <div class="row my-md-4">
