Text changes and new updates

--- a/app/assets/stylesheets/components/event_cards.scss
+++ b/app/assets/stylesheets/components/event_cards.scss
@@ -1,8 +1,10 @@
 .b-card {
   margin-bottom: 25px;
+  position: relative;
 }
 
 .b-image-cover{
+  position: relative;
   margin-top: 0px;
   margin-bottom: 15px;
   padding: 0;
