--- a/app/assets/stylesheets/custom-bootstrap.scss
+++ b/app/assets/stylesheets/custom-bootstrap.scss
@@ -8,7 +8,7 @@
 }
 .custom-file-label::after{
   width: 100%;
-  content: "Upload a file from your computer";
+  content: "Upload een foto van jouw computer of telefoon";
   cursor: pointer;
 }
 .navbar {
