--- a/app/views/footer/_footer.html.erb
+++ b/app/views/footer/_footer.html.erb
@@ -4,9 +4,9 @@
       <div class="col-12 col-md">
         <div class="social-links mb-3">
           <a target="_blank" href="http://www.facebook.com/blendinnow"><i class="fab fa-lg fa-facebook-square"></i></a>
-          <a target="_blank" href=""><i class="fab fa-lg fa-facebook-messenger"></i></a>
+          <a target="_blank" href="https://www.facebook.com/blendinnow"><i class="fab fa-lg fa-facebook-messenger"></i></a>
           <a target="_blank" href="http://www.instagram.com/blendinnow"><i class="fab fa-lg fa-instagram"></i></a>
-          <a target="_blank" href="https://www.youtube.com/channel/UCjOWtafXTWtkOduKom-yN5w"><i class="fab fa-lg fa-youtube"></i></a>
+          <a target="_blank" href="https://vimeo.com/259168746"><i class="fab fa-lg fa-vimeo"></i></a>
         </div>
 
         <h6 class="mb-1"><%= t('footer.languages') %></h6>
@@ -18,7 +18,6 @@
         <h5 class="mb-3"><%= t('footer.about') %></h5>
         <ul class="list-unstyled text-small">
           <li><a class="text-muted" target="_blank" href="https://www.blendinnow.nl/ons-team/"><%= t('footer.team') %></a></li>
-          <li><a class="text-muted" target="_blank" href="https://www.blendinnow.nl/"><%= t('footer.mission') %></a></li>
           <li><a class="text-muted" target="_blank" href="https://www.blendinnow.nl/nieuws/"><%= t('footer.news') %></a></li>
           <li><a class="text-muted" target="_blank" href="https://www.blendinnow.nl/galerij/"><%= t('footer.gallery') %></a></li>
         </ul>
