--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -123,7 +123,7 @@
                                 <tr>
                                     <td bgcolor="#ffffff" width="200" align="left">
                                       <a href="https://community.blendinnow.nl" target="_blank">
-                                        <%= image_tag("logo-app.png", size: "200x45", style: "display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;", border:0) %>
+                                        <%= image_tag("blendin-logo.png", size: "200x45", style: "display: block; font-family: Helvetica, Arial, sans-serif; color: #666666; font-size: 16px;", border:0) %>
                                       </a>
                                     </td>
                                 </tr>
