--- a/app/views/settings/photo.erb
+++ b/app/views/settings/photo.erb
@@ -6,7 +6,7 @@
     <div class="col-md-9">
       <div class="card">
         <div class="card-header mb-2">
-          Profile Photo
+          Profielfoto
         </div>
         <div class="card-body">
           <%= render 'settings/photo_form' %>
