--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -4,6 +4,14 @@
   <h4 class="mt-5 striped-subtitle"><%= t('.social_title') %></h4>
   <div class="row my-md-4">
     <div class="col-xs-12 col-sm-6 col-md-4">
+      <%= link_to talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
+        <div class="card-body">
+          <h4 class="card-title"><i class="fas fa-diagnoses"></i> <%= t('.talent_teach_card_title') %></h4>
+          <p class="card-text"><%= t('.talent_teach_card_subtitle') %></p>
+        </div>
+      <% end %>
+    </div>
+    <div class="col-xs-12 col-sm-6 col-md-4">
       <%= link_to events_path, class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
           <h4 class="card-title"><i class="fas fa-users"></i> <%= t('.events_card_title') %></h4>
@@ -12,10 +20,10 @@
       <% end  %>
     </div>
     <div class="col-xs-12 col-sm-6 col-md-4">
-      <%= link_to talents_path, class:"card shadow-sm dashboard-card-lnk" do %>
+      <%= link_to pages_path("coffe"), class:"card shadow-sm dashboard-card-lnk" do %>
         <div class="card-body">
-          <h4 class="card-title"><i class="fas fa-diagnoses"></i> <%= t('.talent_teach_card_title') %></h4>
-          <p class="card-text"><%= t('.talent_teach_card_subtitle') %></p>
+          <h4 class="card-title"><i class="fas fa-coffee"></i> <%= t('.coffe_card_title') %></h4>
+          <p class="card-text"><%= t('.coffe_card_subtitle') %></p>
         </div>
       <% end %>
     </div>
@@ -33,8 +41,20 @@
       <% end %>
     </div>
   </div>
+  <% else %>
+  <h4 class="mt-2 striped-subtitle"><%= t('.work_title_newcomer') %></h4>
+  <div class="row my-md-4">
+    <div class="col-xs-12 col-sm-6 col-md-4">
+      <%= link_to pages_path("request_network"), class:"card shadow-sm dashboard-card-lnk" do %>
+        <div class="card-body">
+          <h4 class="card-title"><i class="fas fa-globe"></i> <%= t('.network_newcomer_card_title') %></h4>
+          <p class="card-text"><%= t('.network_newcomer_card_subtitle') %></p>
+        </div>
+      <% end %>
+    </div>
+  </div>
   <% end %>
-  
+
   <h4 class="mt-2 striped-subtitle"><%= t('.donate_title') %></h4>
 
   <div class="row my-md-4">
