--- a/app/views/pages/donate.html.erb
+++ b/app/views/pages/donate.html.erb
@@ -25,24 +25,24 @@
     </div> -->
 
     <div class="col-lg-6" id="form-to-donate">
-      <h2 class="mt-3">Donate</h2>
+      <h2 class="mt-3">Doneren</h2>
       <form action="https://www.blendinnow.nl/doneren/" class="" method="post">
         <input type="hidden" name="dmm_recurring_interval" value="one">
 
         <div class="form-group">
-          <label>Name</label>
+          <label>Naam</label>
           <input type="text" name="dmm_name" class="form-control" value="" placeholder="Enter name" required>
         </div>
 
         <div class="form-group">
-          <label>Email address</label>
+          <label>Emailadres</label>
           <input type="text" name="dmm_email" class="form-control" value="" aria-describedby="emailHelp" placeholder="Enter email" required>
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          <small id="emailHelp" class="form-text text-muted">We zullen nooit uw gegevens delen met.</small>
         </div>
 
 
         <div class="form-group">
-          <label>Amount</label>
+          <label>Bedrag</label>
             <div class="form-row">
               <div class="col-9">
                 <select id="dmm_dd" class="form-control" onchange="if(this.value!='--'){document.getElementById('dmm_amount').value=this.value;document.getElementById('dmm_amount').style.display = 'none';}else{document.getElementById('dmm_amount').style.display = 'block';}" style="min-width:100%;">
@@ -51,6 +51,9 @@
                   <option value="10,00">&euro; 10,00</option>
                   <option value="25,00">&euro; 25,00</option>
                   <option value="50,00">&euro; 50,00</option>
+                  <option value="100,00">&euro; 100,00</option>
+                  <option value="150,00">&euro; 150,00</option>
+                  <option value="200,00">&euro; 200,00</option>
                 </select>
               </div>
               <div class="col-3">
