--- a/app/views/settings/_profile_form.erb
+++ b/app/views/settings/_profile_form.erb
@@ -1,7 +1,7 @@
 <%= form_for(@user) do |f| %>
 
   <div class="form-group row">
-    <label class="col-lg-3 col-form-label text-lg-right">Full name <sup>*</sup></label>
+    <label class="col-lg-3 col-form-label text-lg-right">Naam <sup>*</sup></label>
     <div class="col-lg-9">
       <%= f.text_field :username, class:"form-control", required: true, placeholder: t('.username_label') %>
     </div>
@@ -11,14 +11,14 @@
     <label class="col-lg-3 col-form-label text-lg-right">Email <sup>*</sup></label>
     <div class="col-lg-9">
       <%= f.email_field :email, class:"form-control" %>
-      <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <small class="form-text text-muted">We zullen nooit uw gegevens delen met andere.</small>
     </div>
   </div>
 
   <div class="form-group row">
     <label class="col-lg-3 col-form-label text-lg-right"><%= t('.gender_label') %></label>
     <div class="col-lg-9">
-      <%= f.select :gender, {}, { prompt: "Gender" }, { class:"custom-select custom-width-select", required: true } do %>
+      <%= f.select :gender, {}, { prompt: "Geslacht" }, { class:"custom-select custom-width-select", required: true } do %>
         <%= options_for_select([[t('.gender_male'), "m"], [t('.gender_female'), "f"]], @user.gender) %>
       <% end %>
     </div>
@@ -40,7 +40,17 @@
     </label>
     <div class="col-lg-9">
       <%= f.text_field :full_street_address, class:"form-control location-input-form", required: true, placeholder: t('.address_placeholder') %>
-      <small class="form-text text-muted">We'll never share your email with anyone else.</small>
+    </div>
+  </div>
+
+  <div class="form-group row">
+    <label class="col-lg-3 col-form-label text-lg-right">
+      <%= t('.local_label') %> <sup>*</sup>
+    </label>
+    <div class="col-lg-9">
+    <%= f.select :local, {}, { prompt: "Please select an option" }, { class:"custom-select custom-width-select", required: true } do %>
+      <%= options_for_select([[t('.im_local'), true], [t('.im_newcomer'), false]], @user.local) %>
+    <% end %>
     </div>
   </div>
 
@@ -77,7 +87,7 @@
 
 
   <div class="float-lg-right">
-    <%= f.submit 'Save', class: "btn btn-primary"  %>
+    <%= f.submit 'Opslaan', class: "btn btn-primary"  %>
   </div>
 <% end %>
 
