--- a/app/views/settings/profile.erb
+++ b/app/views/settings/profile.erb
@@ -6,7 +6,7 @@
     <div class="col-md-9">
       <div class="card">
         <div class="card-header mb-2">
-          Keep update your profile
+          Update je profiel
         </div>
         <div class="card-body">
           <%= render 'settings/profile_form' %>
