--- a/app/views/pages/request_network.html.erb
+++ b/app/views/pages/request_network.html.erb
@@ -1,26 +1,19 @@
-<section class="jumbotron main-color-bg" style="">
+<section class="jumbotron text-center" style="background: #FFF  url(<%= asset_path 'network/hero-network-blendin.jpg' %>) no-repeat top center; background-size:cover; color:#FFF; padding: 6rem 0;">
   <div class="container">
-    <h1 class="jumbotron-heading"><%= t('.title') %></h1>
-    <p class="lead"><%= t('.lead') %></p>
+    <h1 class="jumbotron-heading display-4">DoneerJeNetwerk</h1>
   </div>
 </section>
 
 <div class="container">
-  <div class="row">
-    <!-- <div class="col-lg-4">
-      <div class="card">
-        <div class="card-header mb-3">
-          Blendin Culture Pass
-        </div>
-        <%= image_tag("blendin-pass.png", class: "card-img-top", style:"width: 70%; margin: 0 auto;") %>
-        <div class="card-body">
-          <p class="card-text">Met de Blendin Pas kunnen nieuwkomers in hun eigen tijd bezoeken brengen aan culturele instanties die partner zijn van Blendin (Stedelijke Museum Amsterdam, Het Nationale Opera & Ballet, het Van Gogh Museum, het Rijksmuseum, EYE Film Museum Amsterdam en Cineville zijn dit al). We zijn druk bezig deze pas te realiseren.</p>
-        </div>
-      </div>
-    </div> -->
+  <div class="row justify-content-md-center">
     <div class="col-lg-8">
+      <p class="lead mb-5">
+        Een netwerk is cruciaal om aan een baan te komen in Nederland.
+        <br><br>Blendin koppelt nieuwkomers die werk zoeken aan een Netwerk Donateur op basis van sector en locatie. Als we een match vinden gaan je met een Netwerk Donateur  een traject in van 3 maanden. De Netwerk Donateur zoekt binnen zijn of haar netwerk naar nuttige contacten voor jou en helpt je bij het voorbereiden van netwerkgesprekken. Zo vergroot je jouw netwerk en je kans op het vinden van een passende baan.
+        <br><br>Ben jij een nieuwkomer en ben je nu op zoek naar een baan? Weet je in welke sector je wilt werken? Spreek je B1 Nederlands of vloeiend Engels?  Meld je dan nu aan.
+      </p>
       <div class="card typeform-widget" data-url="https://codegull.typeform.com/to/FGUGES" style="width: 100%; height: 65vh"></div>
       <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
     </div>
   </div>
-  </div>
+</div>
