--- a/app/views/talents/index.html.erb
+++ b/app/views/talents/index.html.erb
@@ -7,25 +7,28 @@
       </h1>
       <p class="lead"><%= t('dashboard.index.talent_teach_card_subtitle') %></p>
       <div>
-        <%= link_to "Get started", new_talent_path, class: "btn btn-primary btn-lg" %>
-        <a href="#learn-more-talent" class="btn btn-outline-light btn-lg">Learn more</a>
+        <a href="#learn-more-talent" class="btn btn-outline-light btn-lg"><%= t('.learn_more') %></a>
       </div>
     </div>
   </section>
-
   <section id="learn-more-talent" class="mt-5">
     <div class="row">
-      <div class="col-md-7 order-md-2 d-flex align-items-center">
+      <div class="col-md-7 order-md-2 align-items-center">
+        <div class="d-flex  mb-4">
+          <% if current_user.local? %>
+            <p class="lead text-center"><b><%= raw t('.teach_talent_cta_text_local') %></b> <br><%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-lg mt-3" %></p><br>
+            <p class="lead text-center"><b><%= raw t('.learn_talent_cta_text_local') %></b> <br><%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-lgmt-3" %></p>
+          <% else %>
+            <p class="lead text-center"><b><%= raw t('.teach_talent_cta_text_newcomer') %></b> <br><%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-lg mt-3" %></p><br>
+            <p class="lead text-center"><b><%= raw t('.learn_talent_cta_text_newcomer') %></b> <br><%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-lg mt-3" %></p>
+          <% end %>
+        </div>
         <div>
           <h2><%= raw t('.info_headline') %></h2>
           <% if current_user.local? %>
             <p class="lead"><%= raw t('.info_content_local') %></p>
-            <p class="lead"><%= raw t('.teach_talent_cta_text_local') %> <%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-md" %></p>
-            <p class="lead"><%= raw t('.learn_talent_cta_text_local') %> <%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-md" %></p>
           <% else %>
             <p class="lead"><%= raw t('.info_content_newcomer') %></p>
-            <p class="lead"><%= raw t('.teach_talent_cta_text_newcomer') %> <%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-md" %></p>
-            <p class="lead"><%= raw t('.learn_talent_cta_text_newcomer') %> <%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-md" %></p>
           <% end %>
         </div>
       </div>
@@ -34,5 +37,18 @@
       </div>
     </div>
   </section>
+  <!-- <section>
+    <div class="row justify-content-md-center">
+      <div class="col-md-7 d-flex align-items-center">
+      <% if current_user.local? %>
+        <p class="lead text-center"><b><%= raw t('.teach_talent_cta_text_local') %></b> <br><%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-lg mt-3" %></p><br>
+        <p class="lead text-center"><b><%= raw t('.learn_talent_cta_text_local') %></b> <br><%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-lgmt-3" %></p>
+      <% else %>
+        <p class="lead text-center"><b><%= raw t('.teach_talent_cta_text_newcomer') %></b> <br><%= link_to t('.click_here_cta'), new_talent_path, class: "btn btn-outline-primary btn-lg mt-3" %></p><br>
+        <p class="lead text-center"><b><%= raw t('.learn_talent_cta_text_newcomer') %></b> <br><%= link_to t('.click_here_cta'), all_talents_path, class: "btn btn-outline-primary btn-lg mt-3" %></p>
+      <% end %>
+    </div>
+    </div>
+  </section> -->
 
 </div>
